--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: tsacdop_desktop
 description: Enjoy podcasts with Tsacdop!
 
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 0.0.1+1
 
 environment:
@@ -12,26 +11,27 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  cached_network_image: ^2.3.2+1
+  cached_network_image: ^3.0.0
   color_thief_flutter: ^1.0.2
-  cupertino_icons: ^1.0.0
-  crypto: ^2.1.5
-  convert: ^2.1.1
+  cupertino_icons: ^1.0.2
+  crypto: ^3.0.1
+  convert: ^3.0.0
   flutter_audio_desktop: ^0.0.7
-  equatable: ^1.2.5
-  effective_dart: ^1.2.4
-  flutter_riverpod: ^0.11.2
+  equatable: ^2.0.0
+  effective_dart: ^1.3.1
+  flutter_riverpod: ^0.14.0+3
   flutter_linkify: ^3.1.3
-  dio: ^3.0.10
-  google_fonts: ^1.1.0
+  dio: ^4.0.0
+  google_fonts: ^2.0.0
   flutter_html: ^0.11.1
-  image: ^2.1.18
-  path_provider: ^1.6.18
+  image: ^3.0.1
+  path_provider: ^2.0.1
   http_proxy: ^1.1.0
-  shared_preferences: ^0.5.12
-  sqflite_common_ffi: ^1.1.1
-  url_launcher: ^5.7.2
-  uuid: ^2.2.2
+  shared_preferences: ^2.0.5
+  sqflite_common_ffi: ^2.0.0
+  url_launcher: ^6.0.3
+  uuid: ^3.0.4
+  dart_vlc: ^0.0.6
   line_icons:
     git:
       url: https://github.com/galonsos/line_icons.git
@@ -39,6 +39,8 @@ dependencies:
     git:
       url: https://github.com/stonega/webfeed.git
 dependency_overrides:
+  xml: 5.0.0
+  http: 0.13.0
   linkify:
     git:
       url: https://github.com/stonega/linkify.git
