--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   crypto: ^3.0.1
   convert: ^3.0.0
   equatable: ^2.0.0
+  dart_vlc: ^0.1.6
   effective_dart: ^1.3.1
   flutter_riverpod: ^0.14.0+3
   flutter_linkify: ^3.1.3
@@ -30,8 +31,7 @@ dependencies:
   sqflite_common_ffi: ^2.0.0
   url_launcher: ^6.0.3
   uuid: ^3.0.4
-  dart_vlc: ^0.0.6
-  bitsdojo_window: ^0.1.0
+  # bitsdojo_window: ^0.1.1+1
   flutter_gtk:
     git:
       url: https://github.com/stonega/flutter_gtk.git
@@ -41,6 +41,7 @@ dependencies:
   webfeed:
     git:
       url: https://github.com/stonega/webfeed.git
+
 dependency_overrides:
   xml: 5.0.0
   http: 0.13.0
