--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   sqflite_common_ffi: ^2.0.0
   url_launcher: ^6.0.3
   uuid: ^3.0.4
-  # bitsdojo_window: ^0.1.1+1
+  desktop_notifications: ^0.6.1
   flutter_gtk:
     git:
       url: https://github.com/stonega/flutter_gtk.git
