--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  cached_network_image: ^3.0.0
+  cached_network_image: ^3.1.0
   color_thief_flutter: ^1.0.2
   cupertino_icons: ^1.0.2
   crypto: ^3.0.1
@@ -19,11 +19,11 @@ dependencies:
   equatable: ^2.0.0
   dart_vlc: ^0.1.6
   effective_dart: ^1.3.1
-  flutter_riverpod: ^0.14.0+3
-  flutter_linkify: ^3.1.3
+  flutter_riverpod: ^1.0.0
+  flutter_linkify: ^5.0.2
   dio: ^4.0.0
   google_fonts: ^2.0.0
-  flutter_html: ^0.11.1
+  flutter_html: ^2.1.5
   image: ^3.0.1
   path_provider: ^2.0.1
   http_proxy: ^1.1.0
@@ -37,6 +37,7 @@ dependencies:
     git:
       url: https://github.com/stonega/webfeed.git
   resizable_widget: ^1.0.5
+  json_annotation: ^4.3.0
 
 dependency_overrides:
   xml: 5.0.0
