--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.5
+  json_serializable: ^6.0.1
 
 flutter:
   assets:
