--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,14 +13,11 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cached_network_image: ^3.1.0
-  color_thief_flutter:
-    git: 
-      url: https://github.com/Tudutu/color_thief_flutter.git
+  color_thief_dart: ^0.1.0
   cupertino_icons: ^1.0.2
   crypto: ^3.0.1
   convert: ^3.0.0
   equatable: ^2.0.0
-  dart_vlc: ^0.1.6
   effective_dart: ^1.3.1
   flutter_riverpod: ^1.0.0
   flutter_linkify: ^5.0.2
@@ -45,10 +42,20 @@ dependencies:
     git:
       url: https://github.com/tsacdop/resizable_widget.git
   json_annotation: ^4.3.0
+  dart_vlc:
+    git:
+      url: https://github.com/alexmercerind/dart_vlc.git
+      ref: master
+  platform: ^3.1.0
 
 dependency_overrides:
   xml: 5.0.0
   http: 0.13.0
+  dart_vlc_ffi:
+    git:
+      url: https://github.com/alexmercerind/dart_vlc.git
+      ref: master
+      path: ffi
   linkify:
     git:
       url: https://github.com/stonega/linkify.git
